--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -562,44 +562,77 @@ Nuestra muestra de transiciones aleatorias se basa en la base de datos Archigos 
 \end{table}
 
  
-\chapter{COMERCIO INTERNACIONAL Y LOS CINCO GRANDES}
-\section{Orígenes y propiedades de los Cinco Grandes}
-El modelo de los Cinco Grandes rasgos de personalidad ha emergido como el más aceptado para comparar medidas de personalidad entre individuos. Los orígenes de este modelo se remontan a los trabajos de \citeA{Allport1936} y \citeA{cattell1943description} quienes estudiaron términos presentes en el lenguaje para explicar diferencias de personalidad. Posteriormente, \citeA{fiske1949consistency} fue el primero en sugerir que con solo cinco factores es posible capturar gran parte de la variabilidad en diferencias de personalidad. El modelo de cinco factores, que incluye extraversión, apertura al cambio, estabilidad emocional, responsabilidad y amabilidad, fue conceptualizado en 1961 por \citeauthor{Tupes1992}. En las décadas posteriores numerosos estudios han mostrado la robustez del modelo para generar medidas de personalidad bajo diferentes muestras, contextos, lenguajes y culturas \cite{costa1992four,Goldberg1990, norman1963toward}[CitarRevisar: [CONGR]Costa and Mccrae, 1992; Goldberg 1990; Norman, 1963; John, Robinson and Pervin, 2010; [TWITTER] [10] [21] [27]; [POLARENA]John et al 2008ª, Yang et al. 1999]. Consecuentemente, este modelo ha alcanzado un alto grado de aceptación por muchos psicólogos[Citar: [43], [34]] y ningún otro modelo es objeto de tantos estudios como el de los Cinco Grandes \cite{John2008}.
+\chapter{COMERCIO INTERNACIONAL Y PERSONALIDAD}\label{ch:CincoGrandes}
 
-Los cinco factores capturan aspectos de la personalidad sustancialmente distintos entre sí \cite{Goldberg1990}. A continuación una breve descripción de cada factor.
+En el capítulo \ref{ch:com_importan} se analizó si los líderes afectan de manera significativa el crecimiento del comercio internacional. Los resultados obtenidos proveen evidencia de que la labor de los líderes sí importa influye en crecimiento el comercio internacional. Con estos resultados en mano, en este capítulo analizamos cómo las características de personalidad de los líderes afectan el crecimiento. Para este estudio se adopta el modelo de personalidad de los Cinco Grandes. 
+
+La organización de este capítulo es la siguiente. En la sección \ref{sec:BIG_FIVE} se hace una introducción al modelo de los Cinco Grandes. En la sección \ref{sec:hyp_BF} se exponen las hipótesis sobre el efecto de las características de personalidad en el crecimiento del comercio internacional. Posteriormente, en la sección \ref{sec:speeches} se describe la metodología empleada para estimar los Cinco Grandes a partir de textos de discursos. Finalmente, los resultados y el análisis se muestran en la sección \ref{sec:resultados}.
+
+\section{Los Cinco Grandes}\label{sec:BIG_FIVE} 
+\subsection{Introducción}
+El modelo de los Cinco Grandes rasgos de personalidad ha emergido como el más aceptado para comparar medidas de personalidad entre individuos. Los orígenes de este modelo se remontan a los trabajos de \citeA{Allport1936} quienes examinaron el lenguaje para entender las diferencias  de personalidad. La idea detrás de este estudio que la personalidad puede ser analizada a través de tópicos o dimensiones separables, tales como intelecto, carácter, temperamento, etc. \cite{McDOUGALL1932}. Esta investigación fue continuada por \citeA{cattell1943description,cattell1947confirmation}, quien realizó análisis factoriales sobre miles de términos en la lengua inglesa para obtener un sistema de 24 factores. Posteriormente, \citeA{fiske1949consistency} fue el primero en sugerir que con solo cinco factores es posible capturar gran parte de la variabilidad en diferencias de personalidad. El modelo de cinco factores, que incluye extraversión, apertura al cambio, estabilidad emocional, responsabilidad y amabilidad, fue conceptualizado en 1961 por \citeauthor{Tupes1992}. En las décadas posteriores numerosos estudios han mostrado la robustez del modelo para generar medidas de personalidad bajo diferentes muestras, contextos, lenguajes y culturas \cite{costa1992four,Goldberg1990, norman1963toward}.  Consecuentemente, este modelo ha alcanzado en la literatura un alto grado de aceptación, de tal forma que ningún otro modelo es sujeto de un mayor número de artículos \cite{John2008}. La tabla \ref{tab:descripcion_CG} presenta una descripción de los Cinco Grandes.
+
+\begin{table}[H]\centering \caption{Descripción de los Cinco Grandes}\label{tab:descripcion_CG}
+	\resizebox{\textwidth}{!}{
+		\begin{threeparttable}
+			\begin{tabular}{llll}
+				\toprule \toprule
+				Factor & Descripción & \multicolumn{2}{l}{Adjetivos característicos} \\ \midrule
+				Extraversión & \begin{tabular}[c]{@{}l@{}}Implica un enfoque enérgico hacia el mundo material y social,\\ e incluye rasgos tales como sociabilidad, asertividad y expresar\\ emociones positivas\end{tabular} & \begin{tabular}[c]{@{}l@{}}Comunicativo\\ Extrovertido\end{tabular} & \begin{tabular}[c]{@{}l@{}}Tímido\\ Callado\end{tabular} \\ \midrule
+				Responsabilidad & \begin{tabular}[c]{@{}l@{}}Describe un control de impulsos que incentiva un comportamiento\\ orientado a tareas y objetivos, tales como pensar antes de actuar,\\ posponer gratificaciones, seguir reglas, además de planear organizar\\ y priorizar tareas.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Organizado\\ Eficiente\end{tabular} & \begin{tabular}[c]{@{}l@{}}Desorganizado\\ Descuidado\end{tabular} \\ \midrule
+				Amabilidad & \begin{tabular}[c]{@{}l@{}}Esta dimensión contrasta una actitud pro-social y comunal con\\ antagonismo hacia otros individuos. Incluye rasgos tales como\\ altruismo, optimismo, confianza y modestia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Simpático\\ Acogedor\end{tabular} & \begin{tabular}[c]{@{}l@{}}Frío\\ Antipático\end{tabular} \\ \midrule
+				Apertura al cambio & \begin{tabular}[c]{@{}l@{}}Describe la profundidad, originalidad y complejidad de la\\ experiencia mental de un individuo.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Creativo\\ Imaginativo\end{tabular} & \begin{tabular}[c]{@{}l@{}}Inepto\\ Inculto\end{tabular} \\ \midrule
+				Estabilidad emocional & \begin{tabular}[c]{@{}l@{}}Contrasta estabilidad emocional y temperamental con la expresión\\ de emociones negativas, tales como ansiedad, nerviosismo, tensión\\ y tristeza.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Relajado\\ No envidioso\end{tabular} & \begin{tabular}[c]{@{}l@{}}Malhumorado\\ Celoso\end{tabular} \\ \bottomrule \bottomrule
+			\end{tabular}%
+			\begin{tablenotes}
+				\footnotesize{Notas: Tabla adaptada de \cite{John2008}. Los adjetivos característicos de cada factor fueron extraídos y traducidos de \cite{Saucier1994}}.
+			\end{tablenotes}
+		\end{threeparttable}
+	}
+\end{table}
+
+\subsection{Resultados experimentales relativos a los Cinco Grandes}
+
+\subsubsection*{Extraversión}
+
+Las personas extrovertidas son percibidas como enérgicas, amigables y asertivas. Orientan sus energías e intereses hacia el mundo exterior de las personas y cosas, a diferencia de los introvertidos que se orientan hacia el mundo interno de la experiencia subjetiva \cite{vandenbos2007apa}. 
+
+Se han encontrado correlaciones entre el factor extraversión y el volumen de la región del cerebro involucrada en el procesamiento de recompensas a estímulos \cite{DeYoung2010}.
+
+Existe amplia evidencia de la correlación entre optimismo y extraversión \cite{Sharpe2011}.
+
+También existe evidencia que sugiere que individuos más extrovertidos tienen expectativas de éxito más altas y estables en pruebas donde el resultado es incierto \cite{Pearce-McCall1986}.
+
+En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos con alta predominancia son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}.
+
+\subsubsection*{Responsabilidad}
+
+\subsubsection*{Amabilidad}
+
+\section{Comercio internacional y personalidad} \label{sec:hyp_BF}
+
+
 
 \subsection{Extraversión}
-		\textit{
-		\begin{quote}
-		Implica un enfoque enérgico hacia el mundo material y social, e incluye rasgos tales como sociabilidad, asertividad y expresar emociones positivas.	\cite{John2008}.
-		\end{quote}
-	}
-Individuos extrovertidos son percibidos como enérgicos, amigables y asertivos. Orientan sus energías e intereses hacia el mundo exterior de las personas y cosas, a diferencia de los introvertidos que se orientan hacia el mundo interno de la experiencia subjetiva \cite{vandenbos2007apa}.
-\subsection{Amabilidad}
-\textit{
-	\begin{quote}
-		Esta dimensión contrasta una actitud pro-social y comunal con antagonismo hacia otros individuos. Incluye rasgos tales como altruismo, optimismo, confianza y modestia.	\cite{John2008}.
-	\end{quote} 
-}
-\subsection{Responsabilidad}
-\textit{
-	\begin{quote}
-		Describe un control de impulsos que incentiva un comportamiento orientado a tareas y objetivos, tales como pensar antes de actuar, posponer gratificaciones, seguir reglas, además de planear organizar y priorizar tareas.	\cite{John2008}.
-	\end{quote} 
-}
-\subsection{Estabilidad emocional}
-\textit{
-	\begin{quote}
-		Contrasta estabilidad emocional y temperamental con la expresión de emociones negativas, tales como ansiedad, nerviosismo, tensión y tristeza.	\cite{John2008}.
-	\end{quote} 
-}
-\subsection{Apertura al cambio}
-\textit{
-	\begin{quote}
-		Describe la profundidad, originalidad y complejidad de la experiencia mental de un individuo.	\cite{John2008}.
-	\end{quote} 
-}
-\section{Los Cinco Grandes e intercambio comercial}
+
+Las personas extrovertidas son percibidas como enérgicas, amigables y asertivas. Orientan sus energías e intereses hacia el mundo exterior de las personas y cosas, a diferencia de los introvertidos que se orientan hacia el mundo interno de la experiencia subjetiva \cite{vandenbos2007apa}. 
+
+Se han encontrado correlaciones entre el factor extraversión y el volumen de la región del cerebro involucrada en el procesamiento de recompensas a estímulos \cite{DeYoung2010}.
+
+Existe amplia evidencia de la correlación entre optimismo y extraversión \cite{Sharpe2011}.
+
+También existe evidencia que sugiere que individuos más extrovertidos tienen expectativas de éxito más altas y estables en pruebas donde el resultado es incierto \cite{Pearce-McCall1986}.
+
+En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos con alta predominancia son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}.
+
+Riesgo de impacto ambiental de TLC \cite{Grossman1991}
+
+TLC aumenta FDI \cite{Buthe2015}
+
+Basados en esta evidencia, conjeturamos que líderes más extrovertidos
+
+
+
 \subsection{Los Cinco Grandes como predictores de comportamiento}
 
 \subsection{Personalidad y comportamiento en política}
@@ -648,7 +681,7 @@ Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y 
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\chapter{METODOLOGÍA Y DATOS}
 
-\section{Midiendo los Cinco Grandes}
+\section{Midiendo los Cinco Grandes}\label{sec:speeches}
 En este estudio se busca establecer una relación entre personalidad y desempeño de líderes nacionales, para lo cual se requiere una base de datos que permita analizar la relación entre estas variables. Sin embargo, a nuestro conocimiento,  no existe una base de datos con información sistemática de la personalidad de líderes nacionales. 
 
 El método comúnmente empleado en la literatura consiste en realizar tests de personalidad sobre los sujetos del estudio. Tal enfoque no es aplicable en este trabajo pues la muestra se compone en su gran mayoría de líderes que ya han muerto. Por esta razón, es necesario recurrir a métodos que permitan medir la personalidad de forma indirecta. 
@@ -812,10 +845,8 @@ $Extra$ denota el factor extraversión, $Apert$ denota apertura al cambio, $Amabi
 
 \subsection{Nota sobre el signo de los coeficientes}
 El signo de $\Delta Y_z$ indica una medida del desempeño del líder saliente con respecto a su sucesor. Si, por ejemplo, $\Delta Imports_z$ es negativo, entonces el crecimiento de las importaciones fue mayor durante el mandato del líder que dejó el cargo que durante el de su sucesor. Análogamente, si $\Delta Imports_z$ es positivo, entonces las importaciones tuvieron un menor crecimiento promedio durante el mandato del líder saliente que durante el mandato del sucesor. En consecuencia, los factores de personalidad asociados a coeficientes negativos en la regresión (\ref{eq:reg_2}) están relacionados positivamente con un mayor crecimiento de las importaciones. De igual manera, los coeficientes de personalidad con coeficientes de signo positivo están realacionados positivamente con un menor crecimiento de las importaciones. Esta observación también es válida para el crecimiento de las exportaciones y para FDI.
-           %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-           %   CAPITULO 2
-           %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{RESULTADOS}
+        
+\section{Resultados} \label{sec:resultados}
 
 \begin{table}[h]
 	%\resizebox{\textwidth}{!}{
