--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1376,4 +1376,40 @@
 	volume = {2},
 	year = {2011}
 }
-
+@article{cattell1947confirmation,
+	title={Confirmation and clarification of primary personality factors},
+	author={Cattell, Raymond B},
+	journal={Psychometrika},
+	volume={12},
+	number={3},
+	pages={197--220},
+	year={1947},
+	publisher={Springer}
+}
+@article{McDOUGALL1932,
+	abstract = {Presents information on character and personality. Definition of character; Creation of an independent science of character; Theory of character.},
+	author = {McDougall, William},
+	doi = {10.1111/j.1467-6494.1932.tb02209.x},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/words character and personality.pdf:pdf},
+	isbn = {07306407},
+	issn = {0022-3506},
+	journal = {Journal of Personality},
+	mendeley-groups = {Personality},
+	pages = {3--16},
+	pmid = {16313378},
+	title = {{Of the Words Character and Personality}},
+	url = {http://doi.wiley.com/10.1111/j.1467-6494.1932.tb02209.x},
+	volume = {1},
+	year = {1932}
+}
+@article{Saucier1994,
+	author = {Saucier, Gerard},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/Saucier.Minimarkers.Full.pdf:pdf},
+	journal = {Journal of Peronality Assessment},
+	mendeley-groups = {Personality},
+	number = {3},
+	pages = {506--516},
+	title = {{Mini-Markers: A Brief Version of Goldberg's Unipolar Big-Five Markers}},
+	volume = {63},
+	year = {1994}
+}
