--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1413,3 +1413,11 @@
 	volume = {63},
 	year = {1994}
 }
+@misc{WorldBank2015,
+	author = {{World Bank}},
+	mendeley-groups = {Economic growth},
+	title = {{World Bank national accounts data, and OECD National Accounts data files.}},
+	url = {http://data.worldbank.org/topic/economy-and-growth},
+	urldate = {01/01/2016},
+	year = {2015}
+}
