--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -14,7 +14,7 @@
 %               as shown in the second line below.
 %
 %\documentclass[12pt,reqno,oneside]{puctesis}         % For dvips
-\documentclass[12pt,reqno,oneside,pdftex]{puctesis} % For pdflatex
+\documentclass[12pt,reqno,oneside,pdftex]{puctesis}   % For pdflatex
 %\documentclass[10pt,reqno,twoside]{puctesis}
 %\draft
 %\doublespacing
@@ -610,29 +610,55 @@ El modelo de los Cinco Grandes rasgos de personalidad ha emergido como el más ac
 
 \subsection{Resultados experimentales relativos a los Cinco Grandes}
 
-Las medidas de personalidad, y en particular el modelo de los Cinco Grandes, permiten predecir una gran variedad de resultados que tanto economistas como cientistas políticos estudian. Por ejemplo, en el ámbito político, se han establecido relaciones entre los Cinco Grandes y preferencias conservadoras y liberales, tanto en el ámbito social  como en el económico \cite{Gerber2010,Gerber2011}. También se ha encontrado que los Cinco Grandes y otros rasgos de personalidad influyen en las decisiones y disposiciones de líderes políticos en temas relativos a la política exterior, tales como cooperación e integración \cite{Etheredge,Schoen2007}, resolución de conflictos \cite{Winter1987} y comercio internacional \cite{Crichlow2002,Johnston2013}. En el ámbito económico, se han encontrado vínculos entre medidas de personalidad y parámetros de preferencias tradicionalmente empleados en modelos de decisión, por ejemplo: descuento de utilidades en el tiempo, aversión al riesgo, preferencias sobre consumo y ocio, altruismo, etc. Estos parámetros permiten, a su vez, predecir el comportamiento de individuos en juegos económicos. Para una revisión de estos resultados véase \cite{Almlund2011}.
+Las medidas de personalidad, y en particular el modelo de los Cinco Grandes, permiten predecir una gran variedad de resultados que tanto economistas como cientistas políticos estudian. Por ejemplo, en el ámbito político, se han establecido relaciones entre los Cinco Grandes y preferencias conservadoras y liberales, tanto en la dimensión social  como en la económica \cite{Gerber2010,Gerber2011}. También se ha encontrado que los Cinco Grandes y otros rasgos de personalidad influyen en las decisiones y disposiciones de líderes políticos en temas relativos a la política exterior, tales como cooperación e integración \cite{Etheredge,Schoen2007}, resolución de conflictos \cite{Winter1987} y comercio internacional \cite{Crichlow2002,Johnston2013}. En el ámbito económico, se han encontrado vínculos entre medidas de personalidad y parámetros de preferencias tradicionalmente empleados en modelos de decisión, por ejemplo: descuento de utilidades en el tiempo, aversión al riesgo, preferencias sobre consumo y ocio, altruismo, etc. Estos parámetros permiten, a su vez, predecir el comportamiento de individuos en juegos económicos. Para una revisión de estos resultados véase \cite{Almlund2011}.
 
-En esta sección se revisan algunos de estos resultados, pues nos permitirán esclarecer la relación entre las medidas de personalidad y las preferencias sobre proteccionismo versus librecambismo. 
-
-
-Creemos que este conjunto de resultados experimentales permiten entender cómo las medidas de personalidad influyen en las preferencias por políticas proteccionistas o librecambistas. A continuación exponemos En consecuencia, nos basaremos en estos resultados para conjeturar cómo cada uno de los Cinco Grandes se relaciona con estas preferencias.
+Consideramos que las preferencias sociales, políticas y económicas, que han sido vinculadas con el modelo de los Cinco Grandes, juegan un rol en la toma de decisiones relativas al comercio internacional. Por ello, en esta sección revisamos algunos de estos resultados, lo que  ayudará a esclarecer la relación entre  personalidad y preferencias sobre proteccionismo versus librecambismo, y nos permitirá elaborar hipótesis al respecto. 
 
 
 \subsubsection*{Extraversión}
 
-Las personas extrovertidas son percibidas como enérgicas, amigables y asertivas. Orientan sus energías e intereses hacia el mundo exterior de las personas y cosas, a diferencia de los introvertidos que se orientan hacia el mundo interno de la experiencia subjetiva \cite{vandenbos2007apa}. 
+%Se han encontrado correlaciones entre el factor extraversión y el volumen de la región del cerebro involucrada en el procesamiento de recompensas a estímulos \cite{DeYoung2010}.
 
-Se han encontrado correlaciones entre el factor extraversión y el volumen de la región del cerebro involucrada en el procesamiento de recompensas a estímulos \cite{DeYoung2010}.
+%En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}.
 
-Existe amplia evidencia de la correlación entre optimismo y extraversión \cite{Sharpe2011}.
+%Necesidad de seguridad y certeza proteccionismo \cite{Johnston2013}
 
-También existe evidencia que sugiere que individuos más extrovertidos tienen expectativas de éxito más altas y estables en pruebas donde el resultado es incierto \cite{Pearce-McCall1986}.
+%Riesgo de impacto ambiental de TLC \cite{Grossman1991}
+%Desventajas de Kruger 1987.
+%Destrucción de empleos Gaston 1997
 
-En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos con alta predominancia son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}.
+Las personas extrovertidas son percibidas como enérgicas, amigables y asertivas. Orientan sus energías e intereses hacia el mundo exterior de las personas y cosas, a diferencia de los introvertidos que se orientan hacia el mundo interno de la experiencia subjetiva \cite{vandenbos2007apa}. De acuerdo a evidencia empírica, las personas más extrovertidas son más optimistas \cite{Sharpe2011}. En la misma línea, \citeA{Pearce-McCall1986} muestran que individuos más extrovertidos tienen expectativas de éxito más altas y estables en escenarios donde el resultado es incierto \cite{Pearce-McCall1986}.
+
+%Esto no lleva a pensar que la extraversión es importante para entender las preferencias de los líderes respecto al comercio internacional. 
+
+Por otra parte, los líderes deben tener presente que la liberalización del comercio internacional implica riesgos, pues puede producir tanto beneficios (e.g., menores precios, crecimiento económico, acceso a nuevos productos), como costos (e.g., destrucción de empleos, daño a industrias locales, impacto ambiental). Muchas veces estos efectos son difíciles de prever y los líderes toman decisiones en base a sus propias expectativas. Conjeturamos que los líderes más extrovertidos, y que por lo tanto esperan obtener recompensas más altas en escenarios inciertos, valorarán más los beneficios de políticas liberalizadoras y serán más tendientes a restarle importancia a los potenciales costos. 
+
+Otro aspecto importante a considerar es la disposición de los líderes a favorecer la integración y cooperación internacional. Los Tratados de Libre Comercio (TLC) son compromisos internacionales que a menudo requieren la disposición de los suscriptores a dar concesiones en pos de un mayor beneficio colectivo. Por ejemplo, se suele criticar que la globalización restringe cada vez más la soberanía de los países al imponer regulaciones que atañen materias tan variadas como  salud y medio ambiente \cite{Howse2000}. Por ello, la realización de TLCs suele generar opiniones dispares en los políticos. Ciertamente aquellos líderes que ven un mayor valor en la integración internacional, serán más proclives a suscribir este tipo de acuerdos. Ahora bien,
+en \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}. 
+Estos resultados nos permiten conjeturar que los líderes más extrovertidos esperan mayores beneficios 
+
+
+
 
 \subsubsection*{Responsabilidad}
 
+Se asocia la responsabilidad con un menor descuento de pagos futuros. ``Sacrificios ahora por recompensas en el futuro'' \cite{Daly2009}.
+
+Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y significativo predictor de desempeño laboral, en múltiples trabajos \cite{Behling1998,Dudley2006,Hurtz2000}. 
+
+Autodisciplina y orientación a metas (Ozer \& Benet-Martinez, 2006)
+
 \subsubsection*{Amabilidad}
+
+\citeA{Crichlow2002}  estudia el efecto de ciertos atributos de personalidad de legisladores en Estados Unidos sobre temas de cooperación internacional. Específicamente estudia el apoyo hacia medidas que buscan reducir las barreras al comercio internacional. Encuentra efectos significativos incluso después de controlar por partido e ideología del legislador.
+
+By and large, personality affects foreign policy opinions roughly as strongly as traditional factors such as partisan- ship, ideology, and social background \cite{Schoen2007}. Among the traits studied, agreeableness and open- ness render persons more supportive of international cooperation and more skeptical of the use of military force, whereas conscientiousness exhibits reverse effects.
+
+\citeA{Hermann1980} estudia el impacto de 6 características personales de 45 líderes nacionales en sus comportamientos relativos a política exterior. Se encuentra una relación positiva entre la capacidad de un líder para confiar en otros (amabilidad) y su voluntad para realizar compromisos internacionales.
+
+Aversión al riesgo y amabilidad \cite{Borghans2009}.
+
+Riesgo de impacto ambiental de TLC \cite{Grossman1991}
 
 \section{Comercio internacional y personalidad} \label{sec:hyp_BF}
 
@@ -652,7 +678,6 @@ En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives
 
 Riesgo de impacto ambiental de TLC \cite{Grossman1991}
 
-TLC aumenta FDI \cite{Buthe2015}
 
 Basados en esta evidencia, conjeturamos que líderes más extrovertidos
 
@@ -666,13 +691,13 @@ Numerosos estudios indican que las características psicológicas
 
 La evidencia muestra que los Tratados de Libre Comercio (TLC) producen un incremento en el intercambio comercial entre los países que lo suscriben \cite{Baier2007,Baier2009}. 
 
-\citeA{Crichlow2002}  estudia el efecto de ciertos atributos de personalidad de legisladores en Estados Unidos sobre temas de cooperación internacional. Específicamente estudia el apoyo hacia medidas que buscan reducir las barreras al comercio internacional. Encuentra efectos significativos incluso después de controlar por partido e ideología del legislador.
 
-\citeA{Hermann1980} estudia el impacto de 6 características personales de 45 líderes nacionales en sus comportamientos relativos a política exterior. Se encuentra una relación positiva entre la capacidad de un líder para confiar en otros (amabilidad) y su voluntad para realizar compromisos internacionales.
+
+
 
 Proteccionismo y seguridad, riesgo \cite{Johnston2013}
 
-By and large, personality affects foreign policy opinions roughly as strongly as traditional factors such as partisan- ship, ideology, and social background \cite{Schoen2007}. Among the traits studied, agreeableness and open- ness render persons more supportive of international cooperation and more skeptical of the use of military force, whereas conscientiousness exhibits reverse effects.
+
 
 Determinants of FDI flows: political risks \cite{Schneider1985,Busse2007}
 Negative effect of tax \cite{Loree1995}
@@ -695,9 +720,7 @@ TLC aumenta FDI \cite{Buthe2015}
 Basados en esta evidencia, conjeturamos que líderes más extrovertidos
 
 \subsubsection{Responsabilidad}
-Se asocia la responsabilidad con un menor descuento de pagos futuros. ``Sacrificios ahora por recompensas en el futuro'' \cite{Daly2009}.
 
-Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y significativo predictor de desempeño laboral, en múltiples trabajos \cite{Behling1998,Dudley2006,Hurtz2000}. 
 
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 2
