--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1421,3 +1421,27 @@
 	urldate = {01/01/2016},
 	year = {2015}
 }
+@article{Borghans2009,
+	author = {Borghans, Lex and Golsteyn, Bart H H and Heckman, James J and Meijers, Huub and Golsteyn, Bart H H and Heckman, James J},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/agree risk.pdf:pdf},
+	journal = {Journal of the European Economic Association},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {649--658},
+	title = {{Gender Differences in Risk Aversion and Ambiguity Aversion}},
+	volume = {7},
+	year = {2009}
+}
+@article{Howse2000,
+	abstract = {A controversial area where trade rules constrain regulatory diversity is that of food safety. This essay responds to the "democratic" challenge to the World Trade Organization Agreement on Sanitary and Phytosanitary Measures (SPS Agreement) and their interpretation by the WTO dispute settlement organs. The SPS provisions enhance the quality of rational democratic deliberation about risk and its control. If rational deliberation is an important element in making democratic outcomes legitimate, then providing some role for scientific principles and evidence in the regulatory process may enhance, rather than undermine, democratic control of risk.},
+	author = {Howse, R},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Trade/FTA democracy.pdf:pdf},
+	issn = {0026-2234},
+	journal = {Michigan Law Review},
+	mendeley-groups = {Economic growth},
+	number = {7},
+	pages = {2329},
+	title = {{Democracy, science, and free trade: Risk regulation on trial at the World Trade Organization}},
+	volume = {98},
+	year = {2000}
+}
