--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -596,7 +596,7 @@ El modelo de los Cinco Grandes rasgos de personalidad ha emergido como el más ac
 				\toprule \toprule
 				Factor & Descripción & \multicolumn{2}{l}{Adjetivos característicos} \\ \midrule
 				Extraversión & \begin{tabular}[c]{@{}l@{}}Implica un enfoque enérgico hacia el mundo material y social,\\ e incluye rasgos tales como sociabilidad, asertividad y expresar\\ emociones positivas\end{tabular} & \begin{tabular}[c]{@{}l@{}}Comunicativo\\ Extrovertido\end{tabular} & \begin{tabular}[c]{@{}l@{}}Tímido\\ Callado\end{tabular} \\ \midrule
-				Responsabilidad & \begin{tabular}[c]{@{}l@{}}Describe un control de impulsos que incentiva un comportamiento\\ orientado a tareas y objetivos, tales como pensar antes de actuar,\\ posponer gratificaciones, seguir reglas, además de planear organizar\\ y priorizar tareas.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Organizado\\ Eficiente\end{tabular} & \begin{tabular}[c]{@{}l@{}}Desorganizado\\ Descuidado\end{tabular} \\ \midrule
+				Responsabilidad & \begin{tabular}[c]{@{}l@{}}Describe un control de impulsos que incentiva un comportamiento\\ orientado a tareas y objetivos, tales como pensar antes de actuar,\\ posponer gratificaciones, seguir reglas, además de planear, organizar\\ y priorizar tareas.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Organizado\\ Eficiente\end{tabular} & \begin{tabular}[c]{@{}l@{}}Desorganizado\\ Descuidado\end{tabular} \\ \midrule
 				Amabilidad & \begin{tabular}[c]{@{}l@{}}Esta dimensión contrasta una actitud pro-social y gregaria con\\ antagonismo hacia otros individuos. Incluye rasgos tales como\\ altruismo, optimismo, confianza y modestia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Simpático\\ Acogedor\end{tabular} & \begin{tabular}[c]{@{}l@{}}Frío\\ Antipático\end{tabular} \\ \midrule
 				Apertura al cambio & \begin{tabular}[c]{@{}l@{}}Describe la profundidad, originalidad y complejidad de la\\ experiencia mental de un individuo.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Creativo\\ Imaginativo\end{tabular} & \begin{tabular}[c]{@{}l@{}}Inepto\\ Inculto\end{tabular} \\ \midrule
 				Estabilidad emocional & \begin{tabular}[c]{@{}l@{}}Contrasta estabilidad emocional y temperamental con la expresión\\ de emociones negativas, tales como ansiedad, nerviosismo, tensión\\ y tristeza.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Relajado\\ No envidioso\end{tabular} & \begin{tabular}[c]{@{}l@{}}Malhumorado\\ Celoso\end{tabular} \\ \bottomrule \bottomrule
@@ -627,26 +627,34 @@ Consideramos que las preferencias sociales, políticas y económicas, que han sido
 %Desventajas de Kruger 1987.
 %Destrucción de empleos Gaston 1997
 
-Las personas extrovertidas son percibidas como enérgicas, amigables y asertivas. Orientan sus energías e intereses hacia el mundo exterior de las personas y cosas, a diferencia de los introvertidos que se orientan hacia el mundo interno de la experiencia subjetiva \cite{vandenbos2007apa}. De acuerdo a evidencia empírica, las personas más extrovertidas son más optimistas \cite{Sharpe2011}. En la misma línea, \citeA{Pearce-McCall1986} muestran que individuos más extrovertidos tienen expectativas de éxito más altas y estables en escenarios donde el resultado es incierto \cite{Pearce-McCall1986}.
+Las personas extrovertidas son percibidas como enérgicas, amigables y asertivas. Orientan sus energías e intereses hacia el mundo exterior, de las personas y cosas, a diferencia de los introvertidos que se orientan hacia el mundo interno de la experiencia subjetiva \cite{vandenbos2007apa}. De acuerdo a evidencia empírica, las personas más extrovertidas son más optimistas \cite{Sharpe2011}. En la misma línea, \citeA{Pearce-McCall1986} muestran que individuos más extrovertidos tienen expectativas de éxito más altas y estables en escenarios donde el resultado es incierto \cite{Pearce-McCall1986}.
 
 %Esto no lleva a pensar que la extraversión es importante para entender las preferencias de los líderes respecto al comercio internacional. 
 
-Por otra parte, los líderes deben tener presente que la liberalización del comercio internacional implica riesgos, pues puede producir tanto beneficios (e.g., menores precios, crecimiento económico, acceso a nuevos productos), como costos (e.g., destrucción de empleos, daño a industrias locales, impacto ambiental). Muchas veces estos efectos son difíciles de prever y los líderes toman decisiones en base a sus propias expectativas. Conjeturamos que los líderes más extrovertidos, y que por lo tanto esperan obtener recompensas más altas en escenarios inciertos, valorarán más los beneficios de políticas liberalizadoras y serán más tendientes a restarle importancia a los potenciales costos. 
+Por otra parte, los líderes deben tener presente que la liberalización del comercio internacional implica riesgos, pues puede producir tanto beneficios (e.g., menores precios, crecimiento económico, acceso a nuevos productos), como costos (e.g., destrucción de empleos, daño a industrias locales, impacto ambiental). Muchas veces estos efectos son difíciles de prever y los líderes toman decisiones en base a sus propias expectativas. Los resultados experimentales nos llevan a conjeturar que los líderes más extrovertidos, y que por lo tanto esperan obtener recompensas más altas en escenarios inciertos, valorarán más los beneficios de políticas liberalizadoras y serán más tendientes a restarle importancia a los potenciales costos. 
 
-Otro aspecto importante a considerar es la disposición de los líderes a favorecer la integración y cooperación internacional. Los Tratados de Libre Comercio (TLC) son compromisos internacionales que a menudo requieren la disposición de los suscriptores a dar concesiones en pos de un mayor beneficio colectivo. Por ejemplo, se suele criticar que la globalización restringe cada vez más la soberanía de los países al imponer regulaciones que atañen materias tan variadas como  salud y medio ambiente \cite{Howse2000}. Por ello, la realización de TLCs suele generar opiniones dispares en los políticos. Ciertamente aquellos líderes que ven un mayor valor en la integración internacional, serán más proclives a suscribir este tipo de acuerdos. Ahora bien,
+Otro aspecto importante a considerar es la disposición de los líderes a valorar y promover la integración internacional. Los Tratados de Libre Comercio (TLC) son compromisos internacionales que a menudo requieren la disposición de los suscriptores a dar concesiones en pos de un mayor beneficio colectivo. Por ejemplo, se suele criticar que la globalización restringe cada vez más la soberanía de los países al imponer regulaciones que atañen materias tan variadas como  salud y medio ambiente \cite{Howse2000}. Por ello, la realización de TLCs suele generar opiniones dispares en los políticos. Ciertamente aquellos líderes que ven un mayor valor en la integración internacional y en la globalización, serán más proclives a suscribir este tipo de acuerdos. Ahora bien,
 en \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}. 
-Estos resultados nos permiten conjeturar que los líderes más extrovertidos esperan mayores beneficios 
+Estos resultados nos permiten elaborar la siguiente hipótesis:
+\vspace{.5cm}
+
+\noindent\textbf{Hipótesis 1.} \textit{Líderes más extravertidos prefieren políticas liberalizadoras sobre políticas proteccionistas. En consecuencia el comercio internacional crece más durante el mandato de líderes más extravertidos.} 
 
 
 
 
 \subsubsection*{Responsabilidad}
 
-Se asocia la responsabilidad con un menor descuento de pagos futuros. ``Sacrificios ahora por recompensas en el futuro'' \cite{Daly2009}.
+%Se asocia la responsabilidad con un menor descuento de pagos futuros. ``Sacrificios ahora por recompensas en el futuro'' \cite{Daly2009}.
 
-Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y significativo predictor de desempeño laboral, en múltiples trabajos \cite{Behling1998,Dudley2006,Hurtz2000}. 
+%Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y significativo predictor de desempeño laboral, en múltiples trabajos y contextos \cite{Behling1998,Dudley2006,Hurtz2000}. 
 
-Autodisciplina y orientación a metas (Ozer \& Benet-Martinez, 2006)
+%Autodisciplina y orientación a metas (Ozer \& Benet-Martinez, 2006)
+
+El factor responsabilidad se asocia con una tendencia a ser organizado y trabajar duro para lograr metas \cite{vandenbos2007apa}. Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y significativo predictor de desempeño laboral, en múltiples ocupaciones y contextos \cite{Behling1998,Dudley2006,Hurtz2000}. Las personas con mayores niveles de responsabilidad son más persistentes en sus esfuerzos y más pacientes al descontar utilidades en el tiempo, prefieren hacer sacrificios en el presente para obtener mayores beneficios en el futuro \cite{Daly2009}.
+
+Cuando un líder evalúa una política relativa al comercio internacional debe ponderar efectos de corto y largo plazo. Implementar barreras comerciales suele tener beneficios inmediatos sobre la economía nacional. Se protegen las industrias locales, lo que tiene efectos positivos sobre el empleo. Además la aplicación de aranceles aumenta la recaudación.
+
 
 \subsubsection*{Amabilidad}
 
